<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="user_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_email_address"
        android:inputType="textEmailAddress"
        android:key="user_enmail_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email_address" />
    <ListPreference
        android:defaultValue="@string/pref_default_fav_social"
        android:entries="@array/pref_entries_fav_social"
        android:entryValues="@array/pref_values_fav_social"
        android:key="user_fav_social"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_fav_social" />

</PreferenceScreen>
